Bruh, at least it works